<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SettingsActivity">

    <TextView
            android:text="@string/st_class_fr"
            android:layout_width="wrap_content" android:textSize="18sp"
            android:layout_height="wrap_content" android:id="@+id/st_class_fr" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"/>
    <Button
            android:text="@string/st_direction" android:background="@drawable/bt_shape"
            android:layout_width="120dp" android:textColor="#FFFFFF"
            android:layout_height="wrap_content" android:id="@+id/st_direction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.2" app:layout_constraintTop_toBottomOf="@+id/st_class_fr"
            android:layout_marginTop="16dp"/>

    <Button
            android:text="@string/st_alert_mode" android:background="@drawable/bt_shape"
            android:layout_width="120dp" android:textColor="#FFFFFF"
            android:layout_height="wrap_content" android:id="@+id/st_alert_mode"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/st_direction"
            app:layout_constraintBottom_toBottomOf="@+id/st_direction" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.8"/>

    <Button
            android:text="@string/st_liveness_demand" android:background="@drawable/bt_shape"
            android:layout_width="120dp" android:textColor="#FFFFFF"
            android:layout_height="wrap_content" android:id="@+id/st_liveness_demand"
            app:layout_constraintTop_toBottomOf="@+id/st_direction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.2" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/st_allowed_distance" android:background="@drawable/bt_shape"
            android:layout_width="120dp" android:textColor="#FFFFFF"
            android:layout_height="wrap_content" android:id="@+id/st_allowed_distance"
            app:layout_constraintTop_toBottomOf="@+id/st_direction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.8" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/st_class_permission"
            android:layout_width="wrap_content" android:textSize="18sp"
            android:layout_height="wrap_content" android:id="@+id/st_class_permission"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/st_liveness_demand"
            android:layout_marginTop="32dp"/>
    <Button
            android:text="@string/st_login_in_timeout" android:background="@drawable/bt_shape"
            android:layout_width="120dp" android:textColor="#FFFFFF"
            android:layout_height="wrap_content" android:id="@+id/st_login_in_timeout"
            app:layout_constraintTop_toBottomOf="@+id/st_class_permission"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.2" android:layout_marginTop="16dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>

    <Button
            android:text="@string/st_change_password" android:background="@drawable/bt_shape"
            android:layout_width="120dp" android:textColor="#FFFFFF"
            android:layout_height="wrap_content" android:id="@+id/st_chaneg_password"
            app:layout_constraintTop_toBottomOf="@+id/st_class_permission" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.8" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/st_class_sysytem"
            android:layout_width="wrap_content" android:textSize="18sp"
            android:layout_height="wrap_content" android:id="@+id/st_class_system"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/st_login_in_timeout"
            android:layout_marginTop="32dp"/>
    <Button
            android:text="@string/st_encrypt_db" android:background="@drawable/bt_shape"
            android:layout_width="120dp" android:textColor="#FFFFFF"
            android:layout_height="wrap_content" android:id="@+id/st_encrypt_db"
            app:layout_constraintTop_toBottomOf="@+id/st_class_system" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.2" android:layout_marginTop="32dp"/>
    <Button
            android:text="@string/st_manage_db" android:background="@drawable/bt_shape"
            android:layout_width="120dp" android:textColor="#FFFFFF"
            android:layout_height="wrap_content" android:id="@+id/st_manage_db"
            app:layout_constraintTop_toBottomOf="@+id/st_class_system" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.8" android:layout_marginTop="32dp"/>
    <Button
            android:text="@string/st_wipe_all" android:background="@drawable/bt_shape_danger"
            android:layout_width="120dp" android:textColor="#FFFFFF"
            android:layout_height="wrap_content" android:id="@+id/st_wipe_all"
            app:layout_constraintTop_toBottomOf="@+id/st_encrypt_db" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.2" android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>