<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="match_parent" android:textColor="@color/colorPrimary"
                android:layout_height="40dp" android:id="@+id/livenessDemadnShowMessage"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" android:layout_marginTop="8dp"/>
        <TextView
                android:text="@string/sid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/title_sid"
                app:layout_constraintTop_toBottomOf="@+id/livenessDemadnShowMessage"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
        />
        <EditText
                android:id="@+id/getSid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/getSid"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/title_sid" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>
        <TextView
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/title_name"
                app:layout_constraintTop_toBottomOf="@+id/getSid"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
        <EditText
                android:id="@+id/getName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/getName"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/title_name" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>
        <TextView
                android:text="@string/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/title_gender"
                app:layout_constraintTop_toBottomOf="@+id/getName"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
        <EditText
                android:id="@+id/getGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/getGender"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/title_gender" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>