<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".fragment.ManageFaceFragment">

    <ImageView
            android:src="@drawable/background"
            android:layout_width="match_parent" android:scaleType="fitXY"
            android:layout_height="match_parent" android:id="@+id/mf_background" android:visibility="visible"
            android:contentDescription="@string/todo" android:adjustViewBounds="false"
            tools:layout_editor_absoluteY="75dp" tools:layout_editor_absoluteX="48dp"/>
    <Button
            android:text="@string/manage_face_bt"
            android:background="@drawable/bt_shape"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/manage_face_bt"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/record_face_from_file_bt"
            app:layout_constraintStart_toStartOf="@+id/record_face_from_file_bt"
            app:layout_constraintEnd_toEndOf="@+id/record_face_from_file_bt"/>
    <Button
            android:text="@string/record_face_from_camera_bt"
            android:background="@drawable/bt_shape"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/record_face_from_camera_bt"
            app:layout_constraintTop_toTopOf="@+id/mf_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/mf_background"
            app:layout_constraintBottom_toBottomOf="@+id/mf_background"
            app:layout_constraintVertical_bias="0.3"/>
    <Button
            android:text="@string/record_face_from_file_bt"
            android:background="@drawable/bt_shape"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/record_face_from_file_bt"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/record_face_from_camera_bt"
            app:layout_constraintStart_toStartOf="@+id/record_face_from_camera_bt"
            app:layout_constraintEnd_toEndOf="@+id/record_face_from_camera_bt"/>
    <TextView
            android:text="@string/mf_text_view"
            android:layout_width="wrap_content" android:textColor="#FFFFFF"
            android:textSize="18sp" android:gravity="center"
            android:layout_height="wrap_content" android:id="@+id/mf_text_view"
            app:layout_constraintBottom_toBottomOf="@+id/mf_background"
            app:layout_constraintEnd_toEndOf="@+id/mf_background"
            app:layout_constraintStart_toStartOf="@+id/mf_background" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/mf_background" app:layout_constraintVertical_bias="0.9"/>
</androidx.constraintlayout.widget.ConstraintLayout>
