<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical" android:id="@+id/linearLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <Switch
                android:text="@string/hasSysAdminPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/hasSysAdminPassword"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/sysAdminPasswordHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/sysAdminPasswordHint"
                app:layout_constraintTop_toBottomOf="@+id/hasSysAdminPassword"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textPassword"
                android:ems="10" android:hint="@string/sysAdminPassword"
                android:id="@+id/checkPassword"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/sysAdminPasswordHint"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>