<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical" android:id="@+id/linearLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="match_parent" android:textColor="@color/colorPrimary"
                android:gravity="center_vertical"
                android:layout_height="90dp" android:id="@+id/livenessDemadnShowMessage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
        <Switch
                android:text="@string/liveness_demand_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/liveness_demand_record"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/livenessDemadnShowMessage"/>
        <Switch
                android:text="@string/liveness_demand_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/liveness_demand_permission"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/liveness_demand_record"/>
        <Switch
                android:text="@string/liveness_demand_recognition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/liveness_demand_recognition"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/liveness_demand_permission"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>