<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.AccountFragment" android:id="@+id/frameLayout2">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <ImageView
                android:src="@drawable/account"
                android:layout_width="250dp" android:alpha="0.4" android:scaleType="centerInside"
                android:layout_height="200dp" android:id="@+id/imageView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />
        <TextView
                android:text="@string/sysAdminInfo" android:textSize="20sp" android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/sysAdminInfo"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp" android:layout_marginStart="24dp"/>

        <Button
                android:text="@string/changeSysAdmin" android:textColor="#FFFFFF"
                android:layout_width="140dp" android:background="@drawable/bt_shape"
                android:layout_height="wrap_content" android:id="@+id/changeSysAdmin"
                app:layout_constraintStart_toStartOf="parent" android:textSize="15sp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.4"/>

        <Button
                android:text="@string/manageAdmin" android:textColor="#FFFFFF"
                android:layout_width="120dp" android:background="@drawable/bt_shape"
                android:layout_height="wrap_content" android:id="@+id/manageAdmin"
                app:layout_constraintEnd_toEndOf="parent" android:textSize="15sp"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/changeSysAdmin"
                android:layout_marginTop="32dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
